2001-05-05  Tom Tromey  <tromey@redhat.com>

	* tests/Makefile.am (XFAIL_TESTS): Removed man.test.
	* mans.am (install-man%SECTION%): Handle dist_ and nodist_
	prefixes.
	(uninstall-man%SECTION%): Likewise.
	* automake.in (handle_man_pages): Handle dist_ and nodist_
	prefixes.

	* automake.texi (Future): Removed.
	(Depth): Removed.
	(Hello): Don't mention `deep'.
	(Top level): Likewise.

	* automake.in (conditional_true_when): Use a hash, not index().
	Also, a TRUE component always results in a true return.
	Fixes test cond10.test.  For PR automake/164.
	* tests/Makefile.am (XFAIL_TESTS): Removed cond10.test.

2001-05-05  Raja R Harinath  <harinath@cs.umn.edu>

	For PR automake/164:
	* tests/Makefile.am (TESTS): Added new file.
	(XFAIL_TESTS): Likewise.
	* tests/cond10.test: New file.

2001-05-05  Tom Tromey  <tromey@redhat.com>

	* texinfos.am (uninstall-info-am): Debian install-info v1.8.3
	prints to stderr.
	(install-info-am): Likewise.

2001-05-05  Pavel Roskin <proski@gnu.org>

	* automake.in (scan_texinfo_file): Don't push undefined values
	to @clean_suffixes.

2001-05-05  Richard Boulton  <richard@tartarus.org>

	* automake.in (handle_dist): Check for existence of DIST_SUBDIRS
	first.

2001-05-05  Robert Collins  <robert.collins@itdomain.com.au>

	* automake.in (required_targets): Added uninstall-am.

2001-05-05  Tom Tromey  <tromey@redhat.com>

	Fix bug reported by Robert Boehne:
	* automake.in (output_lex_build_rule): Don't let AMDEP_TRUE be
	substituted.
	(handle_dependencies): Likewise.
	* Makefile.am (maintainer-check): Look for AMDEP_TRUE
	substitution.  Correct diff now has 30 lines.  Look for space
	after losing `undef'.

2001-05-04  Peter Eisentraut  <peter_e@gmx.net>

	* m4/sanity.m4: Remove the temp file before possible error exits.

2001-05-04  Akim Demaille  <akim@epita.fr>

	* configure.in: Set perllibdir.
	From Dave Morrison.

2001-05-04  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>

	* automake.in ($pkgdata_dir): New.