@@ -35,7 +35,8 @@ install-man%SECTION%: $(man%SECTION%_MANS) $(man_MANS)
 	@list='$(man%SECTION%_MANS) $(dist_man%SECTION%_MANS) $(nodist_man%SECTION%_MANS)'; \
 ## Extract all items from man_MANS that should go in this section.
 ## This must be done dynamically to support conditionals.
-	l2='$(man_MANS) $(dist_man_MANS) $(nodist_man_MANS)'; for i in $$l2; do \
+	l2='$(man_MANS) $(dist_man_MANS) $(nodist_man_MANS)'; \
+	for i in $$l2; do \
 	  case "$$i" in \
 ## Have to accept files like `foo.1c'.
 	    *.%SECTION%*) list="$$list $$i" ;; \
@@ -66,11 +67,11 @@ install-man%SECTION%: $(man%SECTION%_MANS) $(man_MANS)
 .PHONY uninstall-man: uninstall-man%SECTION%
 uninstall-man%SECTION%:
 	@$(NORMAL_UNINSTALL)
-	@list='$(man%SECTION%_MANS)'; \
 	@list='$(man%SECTION%_MANS) $(dist_man%SECTION%_MANS) $(nodist_man%SECTION%_MANS)'; \
 ## Extract all items from man_MANS that should go in this section.
 ## This must be done dynamically to support conditionals.
-	l2='$(man_MANS) $(dist_man_MANS) $(nodist_man_MANS)'; for i in $$l2; do \
+	l2='$(man_MANS) $(dist_man_MANS) $(nodist_man_MANS)'; \
+	for i in $$l2; do \
 	  case "$$i" in \
 ## Have to accept files like `foo.1c'.
 	    *.%SECTION%*) list="$$list $$i" ;; \
