@@ -1,5 +1,8 @@
 2001-05-05  Tom Tromey  <tromey@redhat.com>
 
+	* mans.am (install-man%SECTION%): Minor cleanup.
+	(uninstall-man%SECTION%): Likewise.
+
 	* tests/Makefile.am (XFAIL_TESTS): Removed man.test.
 	* mans.am (install-man%SECTION%): Handle dist_ and nodist_
 	prefixes.
